--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+certifi==2025.8.3
+charset-normalizer==3.4.3
 dnspython==2.7.0
-requests==2.32.3
+idna==3.10
 ipaddress==1.0.23
-pyyaml==6.0
+PyYAML==6.0.2
+requests==2.32.5
+urllib3==2.5.0
